# sittard

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  lefthook.yaml
src/: app.rs  config.rs  lib.rs  main.rs  types.rs
src/audio/: cpal_recorder.rs  mod.rs
src/input/: evdev_listener.rs  keymap.rs  mod.rs
src/model/: huggingface.rs  mod.rs
src/output/: clipboard_output.rs  mod.rs  wayland_output.rs  wtype_output.rs
src/transcribe/: mod.rs  whisper_engine.rs
