[package]
name = "staid"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
hound = "3.5"
sherpa-onnx = "1.13"
evdev = "0.12"
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
indicatif = "0.17"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
num_cpus = "1"
futures-util = "0.3"
bzip2 = "0.4"
tar = "0.4"
